--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -126,7 +126,7 @@
         <a routerLink="/dues">
             <div class="thumbnail">
                 <mat-icon>payment</mat-icon><br>
-                <span style="color:	rgb(255, 255, 255)"><b>{{total_dues}}</b></span><br>
+                <span style="color:	rgb(255, 255, 255)"><b>{{defult}}</b></span><br>
                 <span style="color:#14595c;">Dues</span>
             </div>
         </a>
@@ -134,7 +134,7 @@
         <a routerLink="/reciept">
             <div class="thumbnail">
                 <mat-icon>receipt</mat-icon><br>
-                <span style="color:	rgb(255, 255, 255)"><b>{{total_dues}}</b></span><br>
+                <span style="color:	rgb(255, 255, 255)"><b>{{defult}}</b></span><br>
                 <span style="color:#14595c;">Reciept</span>
             </div>
         </a>
@@ -142,7 +142,7 @@
         <a routerLink="/account">
             <div class="thumbnail">
                 <mat-icon>account_circle</mat-icon><br>
-                <span style="color:	rgb(255, 255, 255)"><b>{{total_dues}}</b></span><br>
+                <span style="color:	rgb(255, 255, 255)"><b>{{defult}}</b></span><br>
                 <span style="color:#14595c;">Account</span>
             </div>
         </a>
@@ -150,47 +150,9 @@
         <a routerLink="/expense">
             <div class="thumbnail">
                 <mat-icon>monetization_on</mat-icon><br>
-                <span style="color:	rgb(255, 255, 255)"><b>{{total_dues}}</b></span><br>
+                <span style="color:	rgb(255, 255, 255)"><b>{{defult}}</b></span><br>
                 <span style="color:#14595c;">Expense</span>
             </div>
         </a>
 
-        <!-- <a routerLink="/expiry">
-            <div class="thumbnail">
-                <mat-icon>help</mat-icon><br>
-                <span style="color:	rgb(255, 255, 255)"><b>{{total_slider}}</b></span><br>
-                <span style="color:#14595c;">Purchase Report</span>
-            </div>
-        </a>
-
-        <a routerLink="/expiry">
-            <div class="thumbnail">
-                <mat-icon>local_offer</mat-icon><br>
-                <span style="color:	rgb(255, 255, 255)"><b>{{total_slider}}</b></span><br>
-                <span style="color:#14595c;">Sale Report</span>
-            </div>
-        </a>
-
-        <a routerLink="/expiry">
-            <div class="thumbnail">
-                <mat-icon>help</mat-icon><br>
-                <span style="color:	rgb(255, 255, 255)"><b>{{total_slider}}</b></span><br>
-                <span style="color:#14595c;">Stock Report</span>
-            </div>
-        </a>
-
-        <a routerLink="/expiry">
-            <div class="thumbnail">
-                <mat-icon>cancel</mat-icon><br>
-                <span style="color:	rgb(255, 255, 255)"><b>{{total_slider}}</b></span><br>
-                <span style="color:#14595c;">Purchase Cancel</span>
-            </div>
-        </a>
-
-        <a routerLink="/expiry">
-            <div class="thumbnail">
-                <mat-icon> cancel </mat-icon><br>
-                <span style="color:	rgb(255, 255, 255)"><b>{{total_slider}}</b></span><br>
-                <span style="color:#14595c;">Sale Cancel</span>
-            </div>
-        </a> -->
+       
