--- a/src/app/admin/add-edit-production/add-edit-production.component.html
+++ b/src/app/admin/add-edit-production/add-edit-production.component.html
@@ -2,12 +2,10 @@
     <span class="example-spacer">Production</span>
     <mat-icon mat-dialog-close>cancel</mat-icon>
 </mat-toolbar>
-<!-- <span>Select Employee</span> -->
+<span>Select Employee</span>
 <div mat-dialog-content>
-    <form [formGroup]="ProductionForm">
-        
+    <form [formGroup]="ProductionForm">        
         <div class="column">
-
             <input type="number" formControlName="production_id" readonly hidden>
             <input  formControlName="production_date"   value="{{currentDate | date:'yyyy-MM-dd'}}" hidden>
             <mat-form-field appearance="fill">
@@ -56,57 +54,71 @@
                 <mat-label>Description</mat-label>
                 <input formControlName="production_desc" matInput placeholder="Description">
             </mat-form-field>
-            <input formControlName="admin_id_fk" type="number" ngModel={{admin_id}} readonly hidden>
+            <input formControlName="admin_id_fk" type="number" ngModel={{admin_id}} readonly  hidden>
         </div>
-        <button class="addbtn" (click)="onSubmit()">Add</button>
+        <button class="addbtn" (click)="Add()">Add</button>
     </form>
-    <div class="cotainer">
-        <div class="count_search">
-            <span class="notice_text"> Total :</span>
-            <div class="search">
-                <input matInput (keyup)="applyFilter($event)" placeholder="Search" #input>
-            </div>
+    <div class="cotainer">    
+      <div class="count_search">
+        <span class="notice_text"> Total : {{productioncount}}</span>
+        <div class="search">
+          <input matInput (keyup)="applyFilter($event)" placeholder="Search" #input>
         </div>
+      </div>
+      <div class="cotainer">
         <form>
-            <div class="mat-elevation-z8">
-                <table mat-table [dataSource]="dataSource" matSort id="table">
-                    <ng-container matColumnDef="slno">
-                        <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>S.N.</th>
-                    </ng-container>
-                    <ng-container matColumnDef="emp_name">
-                        <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Employee</th>
-                        <td class="data" mat-cell *matCellDef="let row">{{row.emp_name}}</td>
-                    </ng-container>
-                    <ng-container matColumnDef="mh_quantity">
-                        <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Quantity</th>
-                        <td class="data" mat-cell *matCellDef="let row">{{row.item_name}}</td>
-                    </ng-container>
-                    <ng-container matColumnDef="mh_date">
-                        <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
-                        <td class="data" mat-cell *matCellDef="let row">{{row.mh_date}}</td>
-                    </ng-container>
-                    <ng-container matColumnDef="cat_name">
-                        <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Category</th>
-                        <td class="data" mat-cell *matCellDef="let row">{{row.cat_name}}</td>
-                    </ng-container>
-                    <ng-container matColumnDef="mh_item">
-                        <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Product</th>
-                        <td class="data" mat-cell *matCellDef="let row">{{row.mh_item}}</td>
-                    </ng-container>
-                    <ng-container matColumnDef="Action">
-                        <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
-                        <td class="data" mat-cell *matCellDef="let row"><mat-icon>edit</mat-icon></td>
-                    </ng-container>
-                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-                    <tr class="mat-row" *matNoDataRow>
-                    </tr>
-                </table>
-                <mat-paginator #paginatorRef [pageSizeOptions]="[5]" aria-label="Select page of users"></mat-paginator>
-            </div>
-        </form>
-        <br>
-    </div>
+          <div class="mat-elevation-z8">
+            <table mat-table [dataSource]="dataSource" matSort id="table">
+              <ng-container matColumnDef="slno">
+                <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>S.N.</th>
+                <td class="data" mat-cell *matCellDef="let row; let i = index;">{{(paginatorRef.pageIndex *
+                  paginatorRef.pageSize)+(i+1)}}</td>
+              </ng-container>
+    
+              <ng-container matColumnDef="emp_name">
+                <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Employee</th>
+                <td class="data" mat-cell *matCellDef="let row">{{row.emp_name}}</td>
+              </ng-container>
+    
+              <ng-container matColumnDef="cat_name">
+                <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Category</th>
+                <td class="data" mat-cell *matCellDef="let row">{{row.cat_name}}</td>
+              </ng-container>
 
-     
-     
+              <ng-container matColumnDef="product_name">
+                <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Item</th>
+                <td class="data" mat-cell *matCellDef="let row">{{row.product_name}}</td>
+              </ng-container>
+
+              <ng-container matColumnDef="production_quantity">
+                <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Quantity</th>
+                <td class="data" mat-cell *matCellDef="let row">{{row.production_quantity}}</td>
+              </ng-container>
+              
+              <ng-container matColumnDef="production_date">
+                <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
+                <td class="data" mat-cell *matCellDef="let row">{{row.production_date}}</td>
+              </ng-container>                
+
+              <ng-container matColumnDef="Action">
+                <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
+                <td class="data" mat-cell *matCellDef="let row"> <mat-icon>edit</mat-icon></td>
+              </ng-container>
+    
+              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+              <tr class="mat-row" *matNoDataRow>
+                <td class="mat-cell" colspan="7">No data show"{{input.value}}"</td>
+              </tr>
+            </table>
+            <mat-paginator #paginatorRef [pageSizeOptions]="[5, 10, 100]"
+              aria-label="Select page of users"></mat-paginator>
+          </div>
+        </form>
+      </div>      
+    </div>
+ 
+
+
+
+   
