--- a/src/app/admin/area-allocate/area-allocate.component.css
+++ b/src/app/admin/area-allocate/area-allocate.component.css
@@ -102,6 +102,18 @@ ng-container {
 /* //////////////////////////table media q//////////////////////////// */
 
 @media(min-width:461px) and (max-width:1180px) {
+    #wrapper {
+        overflow-x: hidden;
+    }
+
+    .cotainer {
+        overflow-x: auto;
+    }
+
+    mat-paginator {
+        position: absolute;
+        width: 100%;
+    }
     .notice_text {
         font-size: 14px;
     }
