--- a/src/app/admin/dashboard/dashboard.component.css
+++ b/src/app/admin/dashboard/dashboard.component.css
@@ -43,15 +43,21 @@ mat-icon {
   .main_thumbnail {
     padding-right: 0px;
   }
-
-  .thumbnail {
+  .thumbnail{
+    width: 32%;
+  height: 100px;
+  float: left;
+  margin-top: 10px;
+  margin-left: 1%;
+}
+  /* .thumbnail {
     width: 27%;
     height: 100px;
     float: left;
     margin-top: 5%;
     margin-left: 4.4%;
 
-  }
+  } */
 
   .thumbnail span {
     font-size: 20px;
@@ -93,14 +99,19 @@ mat-icon {
   .main_thumbnail {
     padding-right: 0px;
   }
-
-  .thumbnail {
+  .thumbnail{
+    width: 32%;
+    height: 100px;
+    margin-left: 1%;
+    margin-right: 0px;
+    margin-top: 8px
+  }
+  /* .thumbnail {
     width: 45%;
     height: 100px;
     float: left;
     margin-top: 20px ;
-    /* margin-right: 0px; */
-  }
+  } */
 
   .thumbnail span {
     font-size: 20px;
@@ -121,7 +132,13 @@ mat-icon {
   .main_thumbnail {
     padding-right: 0px;
   }
-
+/* .thumbnail{
+  width: 32%;
+  height: 100px;
+  margin-left: 1%;
+  margin-right: 0px;
+  margin-top: 8px
+} */
   .thumbnail {
     width: 90%;
     height: 100px;
