--- a/src/app/admin/add-edit-material-handover/add-edit-material-handover.component.css
+++ b/src/app/admin/add-edit-material-handover/add-edit-material-handover.component.css
@@ -24,6 +24,11 @@ mat-form-field {
     top: 5px;
 }
 
+#table_area {
+    width: 100%;
+    height: auto;
+}
+
 #table {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     border-collapse: collapse;
@@ -67,7 +72,7 @@ ng-container {
 
 .addbtn {
     width: 100px;
-    margin: 0px 2px 1px 3px;   
+    margin: 0px 2px 1px 3px;
     height: 34px;
     background-color: #0f575a;
     color: whitesmoke;
@@ -100,82 +105,115 @@ span {
     left: 0px;
 }
 
-@media (min-width:768px) and (max-width:1100px){
+@media (min-width:768px) and (max-width:1100px) {
 
     .column {
-      width: 100%;
-      height: auto;
+        width: 100%;
+        height: auto;
     }
-    
+
     .column mat-form-field {
-      width: 24.1%;
-     
+        width: 24.3%;
     }
-  }
-  
+
+}
+
 @media (min-width:421px) and (max-width:767px) {
- 
-    .column {
-      width: 100%;
-      height: auto;
-    }
-  
-    .column mat-form-field {
-      width: 100%;
-    }
-    form .column{
-      height: auto;
-    }
-   
-  }
-  @media (max-width:420px) {
-    .column {
-      width: 100%;
-      height: auto;
-    }
-  
-    .column mat-form-field {
-      width: 100%;
-    }
-  
-    form .column{
-      height: auto;
-    }
-  
-    .cotainer {
-      margin-top: 5px;
-    }
-    .notice_text {
-      font-size: 13px;
-  }
-  .count_search .notice_text{
-      font-size: 13px;
-  }
-  table th {
-      font-size: 13px;
-  }
-  
-  table td {
-      font-size: 13px;
-  }
-  
-  th.mat-header-cell:first-of-type {
-      padding-left: 13px;
-  }
-  
-  th.mat-header-cell:last-of-type {
-      padding-right: 0px;
-      width: 0%;
-  }
-  
-  td.mat-cell:first-of-type {
-      padding-left: 20px;
-  }
-  
-  td.mat-cell:last-of-type {
-      padding-right: 0px;
-      padding-left: 10px;
-  }
-  }
-  
 
+    .column {
+        width: 100%;
+        height: auto;
+    }
+
+    .column mat-form-field {
+        width: 100%;
+    }
+
+    .cotainer {
+        margin-top: 5px;
+        overflow-x: hidden;
+
+    }
+
+    .count_search {
+        width: 100%;
+        height: 40px;
+    }
+
+    #table_area {
+        overflow-x: auto;
+    }
+
+    form .column {
+        height: auto;
+    }
+
+}
+
+@media (max-width:420px) {
+    .column {
+        width: 100%;
+        height: auto;
+    }
+
+    .column mat-form-field {
+        width: 100%;
+    }
+
+    form .column {
+        height: auto;
+    }
+
+    .cotainer {
+        margin-top: 5px;
+        overflow-x: hidden;
+
+    }
+
+    #table_area {
+        overflow-x: auto;
+    }
+
+    .notice_text {
+        font-size: 13px;
+    }
+
+    .count_search {
+        width: 100%;
+        height: 40px;
+    }
+
+    .search {
+        width: 50%;
+    }
+
+    .count_search .notice_text {
+        font-size: 13px;
+    }
+
+    table th {
+        font-size: 13px;
+    }
+
+    table td {
+        font-size: 13px;
+    }
+
+    th.mat-header-cell:first-of-type {
+        padding-left: 13px;
+    }
+
+    th.mat-header-cell:last-of-type {
+        padding-right: 0px;
+        width: 0%;
+    }
+
+    td.mat-cell:first-of-type {
+        padding-left: 20px;
+    }
+
+    td.mat-cell:last-of-type {
+        padding-right: 0px;
+        padding-left: 10px;
+    }
+}
