--- a/src/app/admin/add-edit-material-handover/add-edit-material-handover.component.html
+++ b/src/app/admin/add-edit-material-handover/add-edit-material-handover.component.html
@@ -1,119 +1,117 @@
- <mat-toolbar>
-    <span class="example-spacer">Material Handover</span>
-    <mat-icon mat-dialog-close>cancel</mat-icon>
+<mat-toolbar>
+  <span class="example-spacer">Material Handover</span>
+  <mat-icon mat-dialog-close>cancel</mat-icon>
 </mat-toolbar>
 <span>Select Employee</span>
 <div mat-dialog-content>
-    <form [formGroup]="MaterialForm">
-        <div class="column">            
-            <input type="number" formControlName="mh_id" readonly hidden>
-            <mat-form-field appearance="fill">
-                <mat-label>Employee</mat-label>
-                <mat-select formControlName="emp_id_fk" (valueChange)="getEmpData($event)">
-                    <mat-option *ngFor="let empdata of empdata" [value]="empdata.emp_id">{{empdata.emp_name}}</mat-option>
-                </mat-select>
-            </mat-form-field>
-            <mat-form-field appearance="fill">
-                <mat-label>Mobile Number</mat-label>
-                <input  type="number" formControlName="emp_mobile" matInput placeholder="Mobile" type="number"
-                onkeypress=" return this.value.length < 10" oninput="if(this.value.length>=10) 
+  <form [formGroup]="MaterialForm">
+    <div class="column">
+      <input type="number" formControlName="mh_id" readonly hidden>
+      <mat-form-field appearance="fill">
+        <mat-label>Employee</mat-label>
+        <mat-select formControlName="emp_id_fk" (valueChange)="getEmpData($event)">
+          <mat-option *ngFor="let empdata of empdata" [value]="empdata.emp_id">{{empdata.emp_name}}</mat-option>
+        </mat-select>
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>Mobile Number</mat-label>
+        <input type="number" formControlName="emp_mobile" matInput placeholder="Mobile" type="number"
+          onkeypress=" return this.value.length < 10" oninput="if(this.value.length>=10) 
                 {this.value=this.value.slice(0,10);}">
-            </mat-form-field>          
-            <mat-form-field appearance="fill">
-              <mat-label>Email ID</mat-label>
-              <input  type="email"formControlName="emp_email" matInput placeholder="Email" >
-          </mat-form-field>  
-          <mat-form-field appearance="fill">
-            <mat-label>Address</mat-label>
-            <input  type="text"formControlName="emp_address" matInput placeholder="Address" >
-          </mat-form-field> <br>            
-           <span>Add Item</span><br>
-            <mat-form-field appearance="fill">
-              <mat-label>Category</mat-label>
-              <mat-select formControlName="cat_id_fk" (valueChange)="getcatdata($event)">
-                  <mat-option *ngFor="let catdata of catdata" [value]="catdata.cat_id">{{catdata.cat_name}}</mat-option>
-              </mat-select>
-          </mat-form-field>            
-            <mat-form-field appearance="fill">
-                <mat-label>Item</mat-label>
-                <mat-select formControlName="item_id_fk">
-                    <mat-option *ngFor="let itemdata of itemdata" [value]="itemdata.item_id">{{itemdata.item_name}}</mat-option>
-                </mat-select>
-            </mat-form-field>
-            <mat-form-field appearance="fill">
-                <mat-label>Quantity</mat-label>
-                <input formControlName="quantity" matInput placeholder="Quantity">
-            </mat-form-field>
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>Email ID</mat-label>
+        <input type="email" formControlName="emp_email" matInput placeholder="Email">
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>Address</mat-label>
+        <input type="text" formControlName="emp_address" matInput placeholder="Address">
+      </mat-form-field> <br>
+      <span>Add Item</span><br>
+      <mat-form-field appearance="fill">
+        <mat-label>Category</mat-label>
+        <mat-select formControlName="cat_id_fk" (valueChange)="getcatdata($event)">
+          <mat-option *ngFor="let catdata of catdata" [value]="catdata.cat_id">{{catdata.cat_name}}</mat-option>
+        </mat-select>
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>Item</mat-label>
+        <mat-select formControlName="item_id_fk">
+          <mat-option *ngFor="let itemdata of itemdata" [value]="itemdata.item_id">{{itemdata.item_name}}</mat-option>
+        </mat-select>
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>Quantity</mat-label>
+        <input formControlName="quantity" matInput placeholder="Quantity">
+      </mat-form-field>
 
-            <mat-form-field appearance="fill">
-                <mat-label>Description</mat-label>
-                <input formControlName="mh_desc" matInput placeholder="Description">
-            </mat-form-field>
-            <input formControlName="admin_id_fk" type="number" ngModel={{admin_id}} readonly hidden>             
-            <input hidden formControlName="mh_date" readonly value="{{currentDate | date:'yyyy-MM-dd'}}">             
-          </div>
-          <button class="addbtn" (click)="addDescription()">Add</button>            
-    </form>     
-        <div class="cotainer">    
-          <div class="count_search">
-            <span class="notice_text"> Total : {{matcount}}</span>
-            <div class="search">
-              <input matInput (keyup)="applyFilter($event)" placeholder="Search" #input>
-            </div>
-          </div>
-          <div class="cotainer">
-            <form>
-              <div class="mat-elevation-z8">
-                <table mat-table [dataSource]="dataSource" matSort id="table">
-                  <ng-container matColumnDef="slno">
-                    <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>S.N.</th>
-                    <td class="data" mat-cell *matCellDef="let row; let i = index;">{{(paginatorRef.pageIndex *
-                      paginatorRef.pageSize)+(i+1)}}</td>
-                  </ng-container>
-        
-                  <ng-container matColumnDef="emp_name">
-                    <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Employee</th>
-                    <td class="data" mat-cell *matCellDef="let row">{{row.emp_name}}</td>
-                  </ng-container>
-        
-                  <ng-container matColumnDef="cat_name">
-                    <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Category</th>
-                    <td class="data" mat-cell *matCellDef="let row">{{row.cat_name}}</td>
-                  </ng-container>
+      <mat-form-field appearance="fill">
+        <mat-label>Description</mat-label>
+        <input formControlName="mh_desc" matInput placeholder="Description">
+      </mat-form-field>
+      <input formControlName="admin_id_fk" type="number" ngModel={{admin_id}} readonly hidden>
+      <input hidden formControlName="mh_date" readonly value="{{currentDate | date:'yyyy-MM-dd'}}">
+    </div>
+    <button class="addbtn" (click)="addDescription()">Add</button>
+  </form>
+  <div class="cotainer">
+    <div class="count_search">
+      <span class="notice_text"> Total : {{matcount}}</span>
+      <div class="search">
+        <input matInput (keyup)="applyFilter($event)" placeholder="Search" #input>
+      </div>
+    </div>
+    <div id="table_area">
+      <form>
+        <div class="mat-elevation-z8">
+          <table mat-table [dataSource]="dataSource" matSort id="table">
+            <ng-container matColumnDef="slno">
+              <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>S.N.</th>
+              <td class="data" mat-cell *matCellDef="let row; let i = index;">{{(paginatorRef.pageIndex *
+                paginatorRef.pageSize)+(i+1)}}</td>
+            </ng-container>
 
-                  <ng-container matColumnDef="item_name">
-                    <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Item</th>
-                    <td class="data" mat-cell *matCellDef="let row">{{row.item_name}}</td>
-                  </ng-container>
+            <ng-container matColumnDef="emp_name">
+              <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Employee</th>
+              <td class="data" mat-cell *matCellDef="let row">{{row.emp_name}}</td>
+            </ng-container>
 
-                  <ng-container matColumnDef="quantity">
-                    <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Quantity</th>
-                    <td class="data" mat-cell *matCellDef="let row">{{row.quantity}}</td>
-                  </ng-container>
-                  
-                  <ng-container matColumnDef="mh_date">
-                    <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
-                    <td class="data" mat-cell *matCellDef="let row">{{row.mh_date}}</td>
-                  </ng-container>                
+            <ng-container matColumnDef="cat_name">
+              <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Category</th>
+              <td class="data" mat-cell *matCellDef="let row">{{row.cat_name}}</td>
+            </ng-container>
 
-                  <ng-container matColumnDef="Action">
-                    <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
-                    <td class="data" mat-cell *matCellDef="let row"> <mat-icon>edit</mat-icon></td>
-                  </ng-container>
-        
-                  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-                  <tr class="mat-row" *matNoDataRow>
-                    <td class="mat-cell" colspan="7">No data show"{{input.value}}"</td>
-                  </tr>
-                </table>
-                <mat-paginator #paginatorRef [pageSizeOptions]="[5, 10, 100]"
-                  aria-label="Select page of users"></mat-paginator>
-              </div>
-            </form>
-          </div>      
+            <ng-container matColumnDef="item_name">
+              <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Item</th>
+              <td class="data" mat-cell *matCellDef="let row">{{row.item_name}}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="quantity">
+              <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Quantity</th>
+              <td class="data" mat-cell *matCellDef="let row">{{row.quantity}}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="mh_date">
+              <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
+              <td class="data" mat-cell *matCellDef="let row">{{row.mh_date}}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="Action">
+              <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
+              <td class="data" mat-cell *matCellDef="let row"> <mat-icon>edit</mat-icon></td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            <tr class="mat-row" *matNoDataRow>
+              <td class="mat-cell" colspan="7">No data show"{{input.value}}"</td>
+            </tr>
+          </table>
+          <!-- <mat-paginator #paginatorRef [pageSizeOptions]="[5, 10, 100]"
+                  aria-label="Select page of users"></mat-paginator> -->
         </div>
-     
-    
-   
-    
+      </form>
+    </div>
+    <mat-paginator #paginatorRef [pageSizeOptions]="[5, 10, 100]" aria-label="Select page of users"></mat-paginator>
+  </div>
+</div>
