--- a/src/app/admin/add-edit-product/add-edit-product.component.css
+++ b/src/app/admin/add-edit-product/add-edit-product.component.css
@@ -1,71 +1,81 @@
  .column {
-  width: 100%;
-  height: auto;
-}
+   width: 100%;
+   height: auto;
+ }
 
-.column mat-form-field {
-  width: 31%;
-  margin-left: 1.2%;
-  margin-right: 1%;
-}
+ .column mat-form-field {
+   width: 31%;
+   margin-left: 1.2%;
+   margin-right: 1%;
+ }
 
-.example-spacer {
-  flex: 1 1 auto;
-  margin-bottom: 20px;
-  color: rgb(20, 89, 92);
-  font-size: 18px;
-}
+ .full_text_box {
+   width: 97.5%;
+   margin-left: 1.2%;
+ }
 
-.material-icons {
-  color: rgb(20, 89, 92);
-  margin-bottom: 20px;
-}
+ .example-spacer {
+   flex: 1 1 auto;
+   margin-bottom: 20px;
+   color: rgb(20, 89, 92);
+   font-size: 18px;
+ }
 
-#main_button {
-  width: 160px;
-  margin: auto;
-}
+ .material-icons {
+   color: rgb(20, 89, 92);
+   margin-bottom: 20px;
+ }
 
-.reset_btn {
-  float: left;
-}
+ #main_button {
+   width: 160px;
+   margin: auto;
+ }
 
-.add_btn {
-  float: right;
-  color: white;
-  background-color: green;
-}
+ .reset_btn {
+   float: left;
+ }
 
-mat-toolbar {
-  height: 40px;
-  background: none;
-  color: whitesmoke;
-  padding: 0px;
-  position: relative;
-} 
+ .add_btn {
+   float: right;
+   color: white;
+   background-color: green;
+ }
+
+ mat-toolbar {
+   height: 40px;
+   background: none;
+   color: whitesmoke;
+   padding: 0px;
+   position: relative;
+ }
 
 
-@media (min-width:521px) and (max-width:767px) {
-  .column {
+ @media (min-width:521px) and (max-width:767px) {
+   .column {
+     width: 100%;
+     height: auto;
+   }
+
+   .column mat-form-field {
+     width: 100%;
+     margin: 0px 0px 0px 2px;
+   }
+   .full_text_box {
     width: 100%;
-    height: auto;
+    margin: 0px;
   }
+ }
 
-  .column mat-form-field {
-    width: 100%;
-  }
-}
-.full_text_box{
-  width: 100%;
-}
-@media (max-width:521px) {
-  .column {
-    width: 100%;
-    height: auto;
-  }
+ @media (max-width:521px) {
+   .column {
+     width: 100%;
+     height: auto;
+   }
 
-  .column mat-form-field {
+   .column mat-form-field {
+     width: 100%;
+   }
+   .full_text_box{
     width: 100%;
-  }
-} 
-
+   }
+ }
