--- a/src/app/admin/add-edit-production/add-edit-production.component.css
+++ b/src/app/admin/add-edit-production/add-edit-production.component.css
@@ -4,9 +4,11 @@
   color: rgb(20, 89, 92);
   font-size: 18px;
 }
-form .column{
+
+form .column {
   height: 175px;
 }
+
 .material-icons {
   color: rgb(20, 89, 92);
   margin-bottom: 20px;
@@ -24,6 +26,11 @@ mat-toolbar {
 mat-form-field {
   margin-right: 5px;
   top: 5px;
+}
+
+#table_area {
+  width: 100%;
+  height: auto;
 }
 
 #table {
@@ -69,7 +76,7 @@ ng-container {
 
 .addbtn {
   width: 100px;
-  margin: 0px 2px 1px 3px;   
+  margin: 0px 2px 1px 3px;
   height: 34px;
   background-color: #0f575a;
   color: whitesmoke;
@@ -106,21 +113,21 @@ span {
   left: 0px;
 }
 
-@media (min-width:768px) and (max-width:1100px){
+@media (min-width:768px) and (max-width:1100px) {
 
   .column {
     width: 100%;
     height: auto;
   }
-  
+
   .column mat-form-field {
-    width: 24.1%;
-   
+    width: 24.3%;
+
   }
 }
 
 @media (min-width:421px) and (max-width:767px) {
- 
+
   .column {
     width: 100%;
     height: auto;
@@ -129,11 +136,27 @@ span {
   .column mat-form-field {
     width: 100%;
   }
-  form .column{
+
+  .cotainer {
+    margin-top: 5px;
+    overflow-x: hidden;
+  }
+
+  .count_search {
+    width: 100%;
+    height: 40px;
+  }
+
+  #table_area {
+    overflow-x: auto;
+  }
+
+  form .column {
     height: auto;
   }
- 
+
 }
+
 @media (max-width:420px) {
   .column {
     width: 100%;
@@ -144,43 +167,60 @@ span {
     width: 100%;
   }
 
-  form .column{
+  form .column {
     height: auto;
   }
 
   .cotainer {
     margin-top: 5px;
+    overflow-x: hidden;
+
   }
+
+  #table_area {
+    overflow-x: auto;
+  }
+
   .notice_text {
     font-size: 13px;
-}
-.count_search .notice_text{
-    font-size: 13px;
-}
-table th {
-    font-size: 13px;
-}
+  }
 
-table td {
-    font-size: 13px;
-}
+  .count_search {
+    width: 100%;
+    height: 40px;
+  }
 
-th.mat-header-cell:first-of-type {
+  .search {
+    width: 50%;
+  }
+
+  .count_search .notice_text {
+    font-size: 13px;
+  }
+
+  table th {
+    font-size: 13px;
+  }
+
+  table td {
+    font-size: 13px;
+  }
+
+  th.mat-header-cell:first-of-type {
     padding-left: 13px;
-}
+  }
 
-th.mat-header-cell:last-of-type {
+  th.mat-header-cell:last-of-type {
     padding-right: 0px;
     width: 0%;
-}
+  }
 
-td.mat-cell:first-of-type {
+  td.mat-cell:first-of-type {
     padding-left: 20px;
-}
+  }
 
-td.mat-cell:last-of-type {
+  td.mat-cell:last-of-type {
     padding-right: 0px;
     padding-left: 10px;
+  }
 }
-}
-
