--- a/src/app/admin/dues/dues.component.css
+++ b/src/app/admin/dues/dues.component.css
@@ -94,6 +94,18 @@ ng-container {
 
 /* //////////////////////////table media q//////////////////////////// */
 @media(min-width:461px) and (max-width:1180px) {
+    #wrapper {
+        overflow-x: hidden;
+    }
+
+    .cotainer {
+        overflow-x: auto;
+    }
+
+    mat-paginator {
+        position: absolute;
+        width: 100%;
+    }
     .notice_text {
         font-size: 14px;
     }
